[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvslam"
version = "0.1.0"
description = "Python bindings for CUVSLAM library"
requires-python = "==3.10.*"
urls = {Homepage = "https://github.com/NVlabs/pycuvslam"}
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "nvidia-cuda-runtime-cu12>=12.0; sys_platform == 'linux'"
]

[tool.setuptools]
packages = ["cuvslam"]
package-data = {"cuvslam" = ["*.so"]}
